--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <h2>iBLio BLueTAG</h2>
 
       <div id="scanPage">
-        <ul style="margin: 35px" id="scanDeviceList"></ul>
+        <ul style="margin: 50px" id="scanDeviceList"></ul>
         <br />
         <div id="msg" style="color:orangeRed;text-align:center;"></div>
+        <div id="msg2" style="color:green;text-align:center;"></div>
         <div id="batteryLevel" style="font-size:130%;color:navy;text-align:center;"></div>
         <div id="ledOn" style="font-size:130%;color:tomato;text-align:center;"></div>
         <fieldset><legend>Select action & Tap the TAG on the List or (re)Scan </legend>               
@@ -33,7 +34,7 @@
             <img src="iBLio_logo_small.jpg" alt="iBLio" id="openURL"><br />
             <b>www.iblio.net</b><br />
             connect@iblio.net<br />
-            <small>[Rel.20160802]</small>
+            <small>[Rel.20160825]</small>
           </p>
         </center>
       </div> 
